--- a/app/env/db.env.example
+++ b/app/env/db.env.example
@@ -2,4 +2,10 @@ DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_PORT=15432
-DB_HOST=postgres
+
+# DB_HOST='currency-db' #for working app in docker
+DB_HOST='127.0.0.1' # for development when app works in host system
+
+POSTGRES_DB=${DB_NAME}
+POSTGRES_USER=${DB_USER}
+POSTGRES_PASSWORD=${DB_PASSWORD}
