fix okx.env.example structure and default values

--- a/app/env/okx.env.example
+++ b/app/env/okx.env.example
@@ -1,5 +1,7 @@
 API_KEY=api_key
 SECRET=secret
 PASSPHRASE=passphrase
-API_URI='https://okx.com'
-HISTORY_INDEX_CANDLES='/api/v5/market/history-index-candles'
+API_URI='https://okx.com/api/v5'
+CANDLES_PATH='/market/candles'
+TICKERS_PATH='/market/tickers?instType=SPOT'
+CURRENCIES_PATH='/asset/currencies'
