--- a/app/env/db.env.example
+++ b/app/env/db.env.example
@@ -1,10 +1,8 @@
-DB_NAME=postgres
+DB_NAME=currency
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_PORT=15432
-
-# DB_HOST=currency-db #for working app in docker
-DB_HOST=127.0.0.1 # for development when app works in host system
+DB_PORT=5432
+DB_HOST=currency-db
 
 POSTGRES_DB=${DB_NAME}
 POSTGRES_USER=${DB_USER}
