--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 services:
   currency-db:
     hostname: "currency-db"
-    image: postgres:15.1
+    image: currency-db:0.0.1
     container_name: currency-db
     volumes:
       - ./data/db:/var/lib/postgresql/data
