add connection to test db

--- a/data-fetcher/env/db.env.example
+++ b/data-fetcher/env/db.env.example
@@ -7,3 +7,9 @@ DB_HOST=currency-db
 POSTGRES_DB=${DB_NAME}
 POSTGRES_USER=${DB_USER}
 POSTGRES_PASSWORD=${DB_PASSWORD}
+
+TEST_DB_NAME=currency
+TEST_DB_USER=postgres
+TEST_DB_PASSWORD=postgres
+TEST_DB_PORT=5432
+TEST_DB_HOST=currency-db-test
