add new params into okx config

--- a/data-fetcher/env/okx.env.example
+++ b/data-fetcher/env/okx.env.example
@@ -1,7 +1,12 @@
 API_KEY=api_key
 SECRET=secret
 PASSPHRASE=passphrase
-API_URI='https://okx.com/api/v5'
-CANDLES_PATH='/market/candles'
-TICKERS_PATH='/market/tickers?instType=SPOT'
-CURRENCIES_PATH='/asset/currencies'
+API_URI='https://okx.com'
+CANDLES_PATH='/api/v5/market/history-candles'
+TICKERS_PATH='/api/v5/market/tickers?instType=SPOT'
+CURRENCIES_PATH='/api/v5/asset/currencies'
+
+BASE_CURRENCY=USDT
+
+CURRENCIES=[BTC,ETH,TON,SOL,XRP]
+CANDLES_BAR=1H
