add wss endpoint into config

--- a/data-fetcher/env/okx.env.example
+++ b/data-fetcher/env/okx.env.example
@@ -5,6 +5,7 @@ API_URI='https://okx.com'
 CANDLES_PATH='/api/v5/market/history-candles'
 TICKERS_PATH='/api/v5/market/tickers?instType=SPOT'
 CURRENCIES_PATH='/api/v5/asset/currencies'
+WSS_ENDPOINT=wss://ws.okx.com:8443/ws/v5/public
 
 BASE_CURRENCY=USDT
 
